Updated swagger definitions for Users and Reviews
