# models/user.js
@@ -1,0 +1,7 @@
+const mongoose = require('mongoose');
+const userSchema = new mongoose.Schema({
+  username: { type: String, required: true },
+  email: { type: String, required: true },
+  role: { type: String, default: 'Customer' }
+});
+module.exports = mongoose.model('User', userSchema);
